# SYDEQuest

./: .gitignore  BINARY_METADATA_RESULTS.md  BUILD_PICO.md  CMakeLists.txt  COMPILATION_FIXES.md  FRAMEBUFFER_REMOVAL_SUMMARY.md  LICENSE  OPTIMIZATION_SUMMARY.md  Plan.txt  README.md  gitignore
Desktop/: DesktopHaptics.h  DesktopInput.cpp  DesktopInput.h  DesktopRenderer.cpp  DesktopRenderer.h  DesktopTimer.cpp  DesktopTimer.h  main_desktop.cpp
Pico/: PicoHaptics.cpp  PicoHaptics.h  PicoInput.cpp  PicoInput.h  PicoRenderer.cpp  PicoRenderer.h  PicoTimer.cpp  PicoTimer.h  board_config.h  main_pico.cpp
Pico/assets/: boss_icon_sprite.h  boss_sean_sprite.h  calvin_young_sprite.h  enemy_basic_sprite.h  enemy_projectile_left_sprite.h  enemy_projectile_right_sprite.h  enemy_ranged_sprite.h  energy_sprite.h  game_over_sprite.h  health_pack_sprite.h  level1_data.h  level2_data.h  level3_data.h  level4_data.h  level5_data.h  level6_data.h  level7_data.h  objective_charger_sprite.h  objective_enclosure_sprite.h  objective_haptic_sprite.h  objective_parts_sprite.h  objective_pico_sprite.h  objective_screen_sprite.h  player_sprite.h  portal_sprite.h  projectile_left_sprite.h  (+7 more)
build-pico/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  platformer.dis  platformer.elf.map  platformer.hex
levels/: Level1.csv  Level2.csv  Level3.csv  Level4.csv  Level5.csv  Level6.csv  Level7.csv  desktop.ini  level1.txt  level2.txt  level3.txt
src/: main.cpp
tools/: csv_to_binary_header.py  png_to_rgb565.py  refactor_game_update.py  regen_level_headers.bat
(+187 files in other folders)
